--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown_ext: "md"
 future: true
 defaults:
     - scope:
-      path: "_diary"
-      type: "diary"
+        path: "blog/diary/_diary"
+        type: "diary"
     values:
       layout: "diary"
